--- a/.github/workflows/build-docker-push.yaml
+++ b/.github/workflows/build-docker-push.yaml
@@ -48,6 +48,7 @@ jobs:
         with:
           context: ./java
           file: ./java/Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:java
@@ -61,6 +62,7 @@ jobs:
         with:
           context: ./python
           file: ./python/Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:python
@@ -68,14 +70,12 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # Sign Java image
       - name: Sign Java image
         if: github.event_name != 'pull_request'
         run: |
           cosign sign --yes ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:java
           cosign sign --yes ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:java-${{ github.sha }}
 
-      # Sign Python image
       - name: Sign Python image
         if: github.event_name != 'pull_request'
         run: |
