--- a/.github/workflows/build-docker-push.yaml
+++ b/.github/workflows/build-docker-push.yaml
@@ -69,6 +69,18 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:python-${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - name: Build and push Go image
+        uses: docker/build-push-action@v5.0.0
+        with:
+          context: ./golang
+          file: ./golang/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go-${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Sign Java image
         if: github.event_name != 'pull_request'
@@ -81,3 +93,8 @@ jobs:
         run: |
           cosign sign --yes ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:python
           cosign sign --yes ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:python-${{ github.sha }}
+      - name: Sign Golang image
+        if: github.event_name != 'pull_request'
+        run: |
+          cosign sign --yes ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go
+          cosign sign --yes ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go-${{ github.sha }}
